2020-09-22
	* begin DMA setup (kmw)

2020-09-20
	* determine logical sector size, moved ata device select into dedicated function (kmw)

2020-09-12
	* detect model, serial, and size of ATA devices (kmw)

2020-09-11
	* execute and read buffer from ATA IDENTIFY (PACKET) command (kmw)

2020-09-06
	* sleep_wait function (kmw)

2020-09-05
	* early ATA initialization, up to setting up and then turning off IRQs (kmw)

2020-08-30
	* in theory, bootloader should be able to handle kernels that go beyond the first track on disk (kmw)

2020-08-29
	* ascertain IDE control ports (kmw)

2020-08-23
	* string conversion class specifier for kprintf (kmw)

2020-08-22
	* added krealloc (kmw)
	* record PCI device info when scanning bus (kmw)
	* char conversion class specifier for kprintf (kmw)
	* added header_type field to pci_device_t (kmw)

2020-08-19
	* VGA console driver now interprets tab characters (kmw)
	* PCI bus scan (kmw)

2020-08-16
	* basic kprintf implementation--no format strings yet (kmw)
	* kprintf now supports unsigned integer-to-decimal conversions (kmw)
	* uint->hexadecimal conversion added to kprintf (kmw)
	* removed superseded debug_print_uint64 function now that kprintf is working (kmw)
	* memory blocks returned by kmalloc() are 8-byte aligned (kmw)

2020-08-15
	* console driver infrastructure and vga console driver (kmw)
	* removed old, superseded console subsystem (kmw)

2020-08-11
	* put check in vga text-mode driver to prevent writing past end of text-mode memory area (kmw)

2020-08-10
	* kernel video interface and vga text-mode driver (kmw)

2020-08-05
	* added raw keyboard driver (kmw)

2020-07-12:
	* update cursor location after writing to system console (kmw)

2020-07-11:
	* remap PIC, add skeleton IRQ handlers (kmw)
	* read system date and time from CMOS RTC (kmw)

2020-07-09:
	* added asm_[in, out]* functions (kmw)

2020-07-08:
	* fixed issue in bootloader (kmw)
	|> int 13h had been instructed to load beyond the 63 sector-per-track limit

2020-06-01: